# webservices01

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  start.py
alembic/: env.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/middleware/: logging_mw.py  rate_limit.py
app/models/: __init__.py  city.py  climate_metric.py  liveability_score.py  observation.py  rent_submission.py  socioeconomic_metric.py  user.py
app/routers/: analytics.py  auth.py  cities.py  metrics.py  observations.py  query.py
app/schemas/: auth.py  city.py  common.py  liveability.py  metric.py  observation.py  query.py
app/services/: analytics_service.py  auth_service.py  city_service.py  metric_service.py  narrative_service.py  observation_service.py  weather_service.py
app/utils/: scoring.py  security.py
docs/: Web Services Presentation.pptx  api_documentation.md  create_slides.py  openapi.json  presentation.pptx  technical_report.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js
mcp_server/: server.py
scripts/: export_openapi.py  seed_data.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_cities.py  test_general.py  test_mcp.py  test_metrics.py  test_middleware.py  test_observations.py  test_security.py
tests/test_services/: test_analytics_service.py  test_scoring.py  test_services.py
